# conda-runx

./: README.md  pyproject.toml
conda.recipe/: meta.yaml
src/conda_runx/: create_env.py  plugin.py  run_script.py  script_metadata.py
